--- a/3th3.md
+++ b/3th3.md
@@ -1,159 +1,38 @@
-### Phân Tích Chiến Lược Marketing của Khu Du Lịch Núi Thần Tài Đà Nẵng
+Thought for 2 seconds```typescriptreact project="java-exercises"
+...
+```
 
-## 1. Các Kênh Truyền Thông Chính
+Tôi đã viết code Java cho 5 bài tập và test cases tương ứng sử dụng JUnit:
 
-### Nền Tảng Số
+1. **Tìm số lớn nhất của 3 số**:
 
-- **Website Chính Thức**: [www.thanhtaimountain.com](http://www.thanhtaimountain.com)
+1. Class `TimSoLonNhat` với phương thức `timMax(int a, int b, int c)`
+2. Test với các trường hợp khác nhau bao gồm số dương, số âm, số bằng nhau
 
-- Giao diện đa ngôn ngữ (Việt, Anh, Hàn, Trung)
-- Hệ thống đặt vé trực tuyến
-- Thông tin chi tiết về dịch vụ và tiện ích
 
 
+2. **Kiểm tra một số có phải là số nguyên tố không**:
 
+1. Class `KiemTraSoNguyenTo` với phương thức `laSoNguyenTo(int n)`
+2. Test với các số nguyên tố và không nguyên tố, bao gồm cả trường hợp đặc biệt
 
 
-### Mạng Xã Hội
 
-- **Facebook**: Cập nhật thường xuyên về:
+3. **Giải phương trình bậc nhất**:
 
-- Hình ảnh check-in của khách
-- Thông tin khuyến mãi
-- Sự kiện đặc biệt
+1. Class `PhuongTrinhBacNhat` với phương thức `giaiPhuongTrinh(double a, double b)`
+2. Test với các trường hợp có nghiệm, vô nghiệm và vô số nghiệm
 
 
 
-- **TikTok & YouTube**:
+4. **Giải phương trình bậc hai**:
 
-- Video trải nghiệm thực tế
-- Review từ influencer
-- Hướng dẫn tham quan
+1. Class `PhuongTrinhBacHai` với phương thức `giaiPhuongTrinh(double a, double b, double c)`
+2. Test với các trường hợp có hai nghiệm phân biệt, nghiệm kép, vô nghiệm và trường hợp a=0
 
 
 
+5. **Nhập ngày và tính ngày tiếp theo**:
 
-
-## 2. Nội Dung Marketing Chủ Đạo
-
-### Thông Điệp Chính
-
-- "Thiên đường suối khoáng nóng giữa núi rừng"
-- "Điểm đến lý tưởng cho cả gia đình"
-- "Trải nghiệm độc đáo tại Đà Nẵng"
-
-
-### Điểm Nhấn Độc Đáo
-
-1. **Suối Khoáng Nóng Tự Nhiên**:
-
-1. Nhiệt độ 37-42 độ C
-2. Giàu khoáng chất có lợi cho sức khỏe
-
-
-
-2. **Dịch Vụ Đa Dạng**:
-
-1. Tắm khoáng
-2. Massage
-3. Công viên nước
-4. Nhà hàng ẩm thực
-
-
-
-
-
-## 3. Chiến Lược Khuyến Mãi
-
-### Combo Dịch Vụ
-
-- Gói gia đình (2 người lớn + 2 trẻ em)
-- Combo tham quan trọn gói
-- Ưu đãi nhóm đông
-
-
-### Chương Trình Theo Mùa
-
-- Giảm giá mùa thấp điểm
-- Ưu đãi đặc biệt dịp lễ tết
-- Khuyến mãi cho học sinh sinh viên
-
-
-## 4. Đối Tượng Khách Hàng
-
-### Phân Khúc Chính
-
-1. **Gia đình có con nhỏ**:
-
-1. Không gian an toàn
-2. Hoạt động phù hợp mọi lứa tuổi
-
-
-
-2. **Khách du lịch trong nước**:
-
-1. Đi theo nhóm
-2. Kết hợp tham quan Đà Nẵng
-
-
-
-3. **Khách quốc tế**:
-
-1. Chủ yếu từ Hàn Quốc, Trung Quốc
-2. Du khách yêu thích trải nghiệm văn hóa
-
-
-
-
-
-## 5. Hoạt Động Quảng Bá Nổi Bật
-
-### Hợp Tác Đối Tác
-
-- Liên kết với các khách sạn lớn tại Đà Nẵng
-- Hợp tác với các công ty lữ hành
-- Kết nối với các nền tảng đặt tour online
-
-
-### Chương Trình Đặc Biệt
-
-1. **Sự Kiện Theo Mùa**:
-
-1. Lễ hội mùa hè
-2. Chương trình đặc biệt dịp Tết
-3. Hoạt động văn hóa định kỳ
-
-
-
-2. **Marketing Trải Nghiệm**:
-
-1. Chương trình cho blogger/KOLs
-2. Tour trải nghiệm cho báo chí
-3. Sự kiện ra mắt dịch vụ mới
-
-
-
-
-
-## 6. Xu Hướng Marketing Mới
-
-### Kỹ Thuật Số
-
-- Ứng dụng di động hướng dẫn tham quan
-- Tích hợp mã QR trong khu du lịch
-- Virtual tour 360 độ trên website
-
-
-### Truyền Thông Xanh
-
-- Nhấn mạnh yếu tố bảo vệ môi trường
-- Quảng bá hoạt động du lịch bền vững
-- Trồng cây xanh và bảo tồn thiên nhiên
-
-
-## 7. Kết Quả Đạt Được
-
-- Lượng khách tham quan tăng đều qua các năm
-- Nhận diện thương hiệu mạnh tại khu vực miền Trung
-- Được đánh giá cao trên các nền tảng du lịch trực tuyến
-- Trở thành điểm đến không thể bỏ qua khi du lịch Đà Nẵng
+1. Class `NgayTiepTheo` với phương thức `tinhNgayTiepTheo(int ngay, int thang, int nam)`
+2. Test với các trường hợp ngày thông thường, cuối tháng, cuối năm, năm nhuận và ngày không hợp lệ
